RESOLVED FIXED138622
DRT and WKTR touch disk cache
https://bugs.webkit.org/show_bug.cgi?id=138622
Summary DRT and WKTR touch disk cache
Alexey Proskuryakov
Reported 2014-11-11 12:21:03 PST
Both DumpRenderTree and WebKitTestRunner create a disk cache, which is wasteful and confusing.
Attachments
proposed fix (11.42 KB, patch)
2014-11-11 12:28 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-11-11 12:28:20 PST
Created attachment 241368 [details] proposed fix Need to wait for EWS, to make sure that passing a nil path doesn't break Mountain Lion.
WebKit Commit Bot
Comment 2 2014-11-11 12:30:15 PST
Attachment 241368 [details] did not pass style-queue: ERROR: Tools/WebKitTestRunner/mac/TestControllerMac.mm:114: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Tools/WebKitTestRunner/mac/TestControllerMac.mm:115: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Tools/DumpRenderTree/mac/DumpRenderTree.mm:1096: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 3 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2014-11-11 12:51:26 PST
Comment on attachment 241368 [details] proposed fix r=me
WebKit Commit Bot
Comment 4 2014-11-11 15:13:07 PST
Comment on attachment 241368 [details] proposed fix Clearing flags on attachment: 241368 Committed r175982: <http://trac.webkit.org/changeset/175982>
WebKit Commit Bot
Comment 5 2014-11-11 15:13:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.