Tools/WebKitTestRunner/mac/TestControllerMac.mm
@@ -106,6 +106,14 @@ void TestController::platformRunUntil(bool& done, double timeout)
 
 void TestController::platformInitializeContext()
 {
+    // Testing uses a private session, which is memory only. However creating one instantiates a shared NSURLCache,
+    // and if we haven't created one yet, the default one will be created on disk.
+    // Making the shared cache memory-only avoids touching the file system.
+    RetainPtr<NSURLCache> sharedCache =
+        adoptNS([[NSURLCache alloc] initWithMemoryCapacity:1024 * 1024
+                                      diskCapacity:0
+                                          diskPath:nil]);
+    [NSURLCache setSharedURLCache:sharedCache.get()];
 }
 
 void TestController::setHidden(bool hidden)
